Edited css to fix overflow issues

--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -1,9 +1,10 @@
 body{
 	margin:0px;
+	overflow: auto;
 }
 
 #topImage {
-	height: 30%;
+	height: 25%;
 	width: 100%;
 	background: url(../images/houseWide.png);
 	background-repeat:no-repeat;
@@ -12,11 +13,12 @@ body{
 }
 
 #title {
-	font-size: 600%;
+	font-size: 6vw;
 	color: white;
 	text-align: center;
 	margin:0px;
 	padding-top: 10%;
+	padding-bottom: 4%;
 }
 
 .menu {
@@ -84,11 +86,12 @@ body{
 	padding-top:2.5%;
 	padding-bottom:2.5%;
 	display: flex;
+	overflow: auto;
 }
 
 #leftSide{
 	float: left;
-	width:60%;
+	width:50%;
 }
 
 #facebook{
