--- a/css/alumniStyle.css
+++ b/css/alumniStyle.css
@@ -3,7 +3,7 @@ body{
 }
 
 #topImage {
-	height: 30%;
+	height: 25%;
 	width: 100%;
 	background: url(../images/houseWide.png);
 	background-repeat:no-repeat;
@@ -12,11 +12,12 @@ body{
 }
 
 #title {
-	font-size: 600%;
+	font-size: 6vw;
 	color: white;
 	text-align: center;
 	margin:0px;
 	padding-top: 10%;
+	padding-bottom: 4%;
 }
 
 .menu {
@@ -79,31 +80,33 @@ body{
 	padding: 5%;
 	padding-top:2.5%;
 	padding-bottom:2.5%;
+	overflow: auto;
 }
 
 .imageContainer{
-	width: 33%;
-	height: 50%;
 	float: left;
 	display: inline-block;
 }
 
+.imageInside{
+	width: 100%;
+	height: 100%;
+}
+
 #slideshow { 
     margin: auto;
-	margin-right:10%;
 	position: relative;
-	height: 250px;
-    width: 50%; 
-    padding: 5%; 
+	height: 400px;
+    width: 480px;
+    padding: 2.5%; 
 }
 
 #slideshow > div { 
-    
-	position: absolute; 
-    top: 10px; 
-    left: 10px; 
-    right: 10px; 
-    bottom: 50px;
+	position: absolute;
+    max-width: 100%;
+    width: 100%;
+    height: 400px;
+    min-height: 100%;
 }
 
 #alumni{
