--- a/css/philanthropyStyle.css
+++ b/css/philanthropyStyle.css
@@ -8,7 +8,7 @@ img {
 }
 
 #topImage {
-	height: 300px;
+	height: 25%;
 	width: 100%;
 	background: url(../images/houseWide.png);
 	background-repeat:no-repeat;
@@ -17,11 +17,12 @@ img {
 }
 
 #title {
-	font-size: 600%;
+	font-size: 6vw;
 	color: white;
 	text-align: center;
 	margin:0px;
 	padding-top: 10%;
+	padding-bottom: 4%;
 }
 
 .menu {
